syntax = "proto3";

package api;
option csharp_namespace = "API";

import "empty.proto";
import "category.proto";
import "deliverable.proto";
import "social_network_provider.proto";

service InfConfig {
  // Requests client and config Version
  rpc GetVersions (Empty) returns (InfVersionInfo) {}

  // Requests a new AppConfig
  rpc GetAppConfig (Empty) returns (AppConfigData) {}

  // Streams image sets for display on the welcome page
  rpc GetWelcomeImages (Empty) returns (stream WelcomeImages) {}
}


message InfVersionInfo
{
  /// If this is higher than the version of the client, the client must be updated
  int32 apiVersion = 1;
  int32 configVersion = 2;
}

message AppConfigData {
  int32 config_version = 1;

  string termsOfServiceUrl = 10;
  string privacyPolicyUrl = 11;

  bool userNeedInvitationToSignUp = 12;

  ServiceConfig serviceConfig = 5;
  repeated Category categories = 6;
  repeated SocialNetworkProvider socialNetworkProviders = 7;
  repeated DeliverableIcon deliverableIcons = 8;
}

message ServiceConfig{
    // MapBox
    string mapboxUrlTemplateDark = 1;
    string mapboxUrlTemplateLight = 2;
    string mapboxToken = 3;
}



message WelcomeImages{
  repeated string imageUrls = 1;
}


