syntax = "proto3";

package invitation_codes;
option csharp_namespace = "InvitationCodes";

import "google/protobuf/timestamp.proto";

message InvitationCodeEntity {
    uint32 schemaVersion = 1;
    string id = 2;
    google.protobuf.Timestamp expiryTimestamp = 3;
    bool isHonored = 4;
}